--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">2018年5月，国家卫生健康委员会、科技部、工业和信息化部、国家药品监督管理局、国家中医药管理局等五部门联合发布了《第一批罕见病目录》，共有121种罕见病被收入这个可扩容的目录中。</div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
-                    <div style="line-height: 1.8rem;letter-spacing:2px;margin: auto;">今年2月，与上述121罕见病配套使用的《罕见病诊疗指南（2019年版）》也随之发布。</div>
+                    <div style="line-height: 1.8rem;letter-spacing:2px;margin: auto;">2019年2月，与上述121罕见病配套使用的《罕见病诊疗指南（2019年版）》也随之发布。</div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
                     <div style="line-height: 1.8rem;letter-spacing:2px;margin:auto;">对我国罕见病患者来说，两份文件代表的是求生的希望；对普通人来说，这是认识罕见病的绝佳窗口。</div>
@@ -2564,21 +2564,21 @@
         <div style="text-align:justify;width:46%;">
             <font face="宋体">
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
-                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">让罕见病患者们欣慰的是，今年频频有好消息传来。新出台了许多罕见病药物相关政策，为他们带来了新希望。
+                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">让罕见病患者们欣慰的是，2019年频频有好消息传来。新出台了许多罕见病药物相关政策，为他们带来了新希望。
                     </div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
-                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">2月11日，国务院会议决定，从3月1日起，对首批21个罕见病药品和4个原料药，参照抗癌药对进口环节减税，按3％征收增值税，国内环节可选择按3％简易办法计征增值税。
+                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">2019年2月11日，国务院会议决定，从2019年3月1日起，对首批21个罕见病药品和4个原料药，参照抗癌药对进口环节减税，按3％征收增值税，国内环节可选择按3％简易办法计征增值税。
                     </div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
-                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">6月20日，国家卫健委公示第一批鼓励仿制药品目录建议清单，共34个药品，囊括了多种抗癌药、传染病药物、罕见病药物，以及此前曾出现过短缺的药物。</div>
+                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">2019年6月20日，国家卫健委公示第一批鼓励仿制药品目录建议清单，共34个药品，囊括了多种抗癌药、传染病药物、罕见病药物，以及此前曾出现过短缺的药物。</div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
-                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">8月22日，《药品管理法(修订草案)》提请第十三届全国人大常委会第十二次会议审议，再度关注药品的网络销售，其中提出，对罕见病等疾病的新药、儿童用药品予以优先审评审批。</div>
+                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">2019年8月22日，《药品管理法(修订草案)》提请第十三届全国人大常委会第十二次会议审议，再度关注药品的网络销售，其中提出，对罕见病等疾病的新药、儿童用药品予以优先审评审批。</div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
-                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">11月28日公布的《2019年国家医保谈判准入药品名单》里，有9个罕见病方面的新增药品，两个续约药品。等到明年一月，新版目录正式实施后，患者的治疗费用便能有所下降。</div>
+                    <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">2019年11月28日公布的《2019年国家医保谈判准入药品名单》里，有9个罕见病方面的新增药品，两个续约药品。等到2020年一月，新版目录正式实施后，患者的治疗费用便能有所下降。</div>
                 </p>
                 <p class="text-black align-left " style="padding-top: 0.2rem;">
                     <div style="line-height: 1.8rem;letter-spacing:0.2rem;margin:auto;">尽管罕见病患者仍然面临诸多难题，但正如国家卫生健康委药物政司副司长张锋所说：“如今已至‘夏天’，我国罕见病领域已有诸多政策开始发挥它温暖的效应。” 期待每位罕见病患者都“有药好用”的那一天。
